--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@ h3 {
 @media (prefers-color-scheme: dark) {
   body {
     color: #c9d1d9;
-    background: #0d1117;
+    background: #242424;
   }
 
   a:link {
-    color: #58a6ff;
+    color: #212A3B;
   }
 
   a:visited {
-    color: #8e96f0;
+    color: #646464;
   }
 }
