--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 ---
 ---
 
-p {
+body {
   max-width: 650px;
   margin: 40px auto;
   padding: 0 10px;
@@ -17,7 +17,7 @@ h3 {
 
 @media (prefers-color-scheme: dark) {
   body {
-    color: #c9d1d9;
+    color: #242424;
     background: #242424;
   }
 
@@ -26,6 +26,6 @@ h3 {
   }
 
   a:visited {
-    color: #646464;
+    color: #212A3B;
   }
 }
