--- a/style.css
+++ b/style.css
@@ -22,10 +22,10 @@ h3 {
   }
 
   a:link {
-    color: #212A3B;
+    color: #242424;
   }
 
   a:visited {
-    color: #212A3B;
+    color: #242424;
   }
 }
