--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 40px auto;
   padding: 0 10px;
   font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  color: #242424;
+  color: #444;
 }
 
 h1,
@@ -17,15 +17,15 @@ h3 {
 
 @media (prefers-color-scheme: dark) {
   body {
-    color: #242424;
+    color: #c9d1d9;
     background: #242424;
   }
-  
-  p {
-  color: #242424;
-}
-  
+
   a:link {
+    color: #212A3B;
+  }
+
+  a:visited {
     color: #212A3B;
   }
 }
