--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h3 {
 
 @media (prefers-color-scheme: dark) {
   body {
-    color: #242424;
+    color: transparent;
     background: #242424;
   }
 
